--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,19 @@ set(PROJECT_SOURCES
         CreateSecretWidget.cpp
         Encoder.h
         Encoder.cpp
+        RevealSecretWidget.h
+        RevealSecretWidget.cpp
+        Sidebar.h
+        Sidebar.cpp
 )
+
+qt6_add_resources(resources.qrc)
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(SecretMessagingFrontEnd
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        resources.qrc
         )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET SecretMessagingFrontEnd APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
