--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,8 +22,8 @@ set(PROJECT_SOURCES
         Encoder.cpp
         RevealSecretWidget.h
         RevealSecretWidget.cpp
-        Sidebar.h
-        Sidebar.cpp
+
+
 )
 
 qt6_add_resources(resources.qrc)
@@ -33,6 +33,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         resources.qrc
+        MainTabWidget.h MainTabWidget.cpp
         )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET SecretMessagingFrontEnd APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
